# saire

./: Cargo.toml  README.md
.resources/: test_07_Brushes.sai  testfile_02_1layerfullred.psd  testfile_02_1layerfullred.sai  testfile_03_layerproperties.psd  testfile_04_layersandgroups.psd  testfile_1.sai
benches/: table_decrypt.rs
res/: brushes.psd  brushes2.psd  layerproperties.sai  layersandgroups.sai  linework.psd  linework.sai  textures.psd  textures.sai  toobig.psd
resources/: sample.sai
src/: block.rs  cipher.rs  document.rs  fs.rs  keys.rs  lib.rs  main.rs  pixel_ops.rs  polyfill.rs  sai.rs  sai_.rs  utils.rs
src/block/: data.rs  mod.rs  table.rs
src/cipher_/: consts.rs  mod.rs  sizes.rs  traits.rs
src/doc/: author.rs  canvas.rs  layer.rs  mod.rs  thumbnail.rs
src/doc/layer/: mod.rs  table.rs
src/document/: author.rs  canvas.rs  layer.rs  mod.rs  thumbnail.rs
src/fs/: document.rs  mod.rs  reader.rs  traverser.rs  visitor.rs
src/internals/: binreader.rs  image.rs  mod.rs  tree.rs
src/models/: canvas.rs  layerv2.rs  mod.rs  thumbnail.rs
src/models/layer/: mod.rs  table.rs
src/models/layerv2/: mod.rs  strategy.rs
src/models_/: document.rs  mod.rs
src/models_/layer/: mod.rs
src/utils/: mod.rs  path.rs  pixel_ops.rs
src/vfs/: driver.rs  mod.rs  pager.rs  traverser.rs
src/vfs_/: driver.rs  fat32.rs  handle.rs  mod.rs
