[package]
name = "saire"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = { version = "2.0.0", optional = true }
indexmap = "2.0.0"
itertools = { version = "0.10.5", default-features = false }
png = { version = "0.17.6", optional = true }

[dev-dependencies]
chrono = "0.4.22"
eyre = "0.6.8"
tabular = "0.2.0"

[features]
default = ["png"]
png = ["dep:png"]
colored = ["dep:colored"]
